# Resource-Hacker

./: README.md  init_autotrader.sh
autotrader/: .env.example  .pre-commit-config.yaml  config.py  pyproject.toml
autotrader/infra/: docker-compose.yml
autotrader/libs/: market.py
autotrader/libs/cb_client/: __init__.py
autotrader/libs/models/: __init__.py
autotrader/libs/rag/: __init__.py
autotrader/scripts/: bootstrap.sh
autotrader/services/api/: Dockerfile
autotrader/services/api/src/: main.py
autotrader/services/executor/: Dockerfile
autotrader/services/executor/src/: execute.py
autotrader/services/ingest/: Dockerfile
autotrader/services/ingest/src/: ingest_worker.py
autotrader/services/macro_agent/: Dockerfile
autotrader/services/macro_agent/src/: summarise.py
autotrader/services/strategy_agent/: Dockerfile
autotrader/services/strategy_agent/src/: plan.py
